ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vip-demo-ssl-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: vip-demo-issuer
  labels:
    app: vip-demo
spec:
  tls:
  - secretName: vip-demo-cert
    hosts:
    - vip.protonchain.com
  rules:
  - host: vip.protonchain.com
    http:
      paths:
      - backend:
          serviceName: vip-demo-backend
          servicePort: 3000
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: vip-demo-backend
  labels:
    app: vip-demo
spec:
  type: NodePort
  selector:
    app: vip-demo
    tier: web
  ports:
  - port: 3000
    targetPort: 3000
